Fix invisible focus-ring around swatch options

--- a/web/css/theme/layout/_product.less
+++ b/web/css/theme/layout/_product.less
@@ -5,3 +5,9 @@
         }
     }
 }
+
+& when not (@critical) {
+    .swatch-option:focus-visible {
+        outline-offset: 0;
+    }
+}
